Fix bootstrap overflow in x direction

--- a/static/styles/style.css
+++ b/static/styles/style.css
@@ -15,6 +15,11 @@
 #fire-background {
   background: linear-gradient(89.2deg, rgb(0, 0, 0) 10.4%, rgb(255, 0, 0) 37.1%, rgb(255, 216, 51) 64.3%, rgb(255, 255, 255) 90.5%);
 }
+* {
+  overflow-x: hidden;
+}
+
+
 
 /* Main Background Animation */
 #main-background {
@@ -163,8 +168,11 @@ img-facility {
 .scrollable-section {
   height: 200px; /* Adjust height as needed */
   overflow-y: scroll;
+  overflow-x:hidden;
 }
-
+#overflow-control1,#overflow-control2,#overflow-control3 {
+  margin-right: 0px ;
+}
 .user-item {
   cursor: pointer;
 }
